fixed flicker

--- a/styles/terminal_theme.css
+++ b/styles/terminal_theme.css
@@ -114,7 +114,7 @@ pre {
 
 
 .flicker__effect{
-	z-index: 2;
+	z-index: -1;
 	position: absolute;
 	top: 0%;
 	left: 0%;
